--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.pokedex.Activities.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/menu_search"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="@string/search"
+        app:showAsAction="always" />
 </menu>
