--- a/app/src/main/res/layout/pokemon_row.xml
+++ b/app/src/main/res/layout/pokemon_row.xml
@@ -2,66 +2,95 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:cardElevation="0dp"
+        android:layout_marginBottom="6dp"
+        app:cardCornerRadius="20dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="12dp">
+            android:padding="12dp"
+            android:background="@color/colorPrimaryLight">
 
-            <ImageView
-                android:id="@+id/pokemonImageId"
+            <android.support.v7.widget.CardView
+                android:id="@+id/imageCardView"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
-                android:background="@android:color/white"
-                />
+                app:cardBackgroundColor="@color/colorPrimary"
+                app:cardCornerRadius="14dp">
+
+            <android.support.v7.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:cardElevation="0dp"
+                app:cardCornerRadius="10dp"
+                android:layout_gravity="center">
+
+                <ImageView
+                    android:id="@+id/pokemonImageId"
+                    android:layout_width="83dp"
+                    android:layout_height="83dp"
+                    android:background="@drawable/stripe_background" />
+
+            </android.support.v7.widget.CardView>
+
+            </android.support.v7.widget.CardView>
 
             <TextView
                 android:id="@+id/indexId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/imageCardView"
                 android:paddingLeft="15dp"
                 android:text="# Pokedex Id"
                 android:textStyle="bold"
-                android:layout_toRightOf="@id/pokemonImageId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:fontFamily="@font/joystix"
+                android:textSize="13sp"/>
 
             <TextView
                 android:id="@+id/pokemonNameId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/indexId"
-                android:layout_toRightOf="@id/pokemonImageId"
+                android:layout_toRightOf="@id/imageCardView"
                 android:paddingLeft="15dp"
                 android:paddingTop="5dp"
                 android:text="Pokemon Name"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:fontFamily="@font/joystix"
+                android:textSize="13sp"/>
 
             <TextView
                 android:id="@+id/abilitiesId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="5dp"
-                android:paddingLeft="15dp"
-                android:textSize="12sp"
                 android:layout_below="@id/pokemonNameId"
-                android:layout_toRightOf="@id/pokemonImageId"
-                android:text="Abilities:"/>
+                android:layout_toRightOf="@id/imageCardView"
+                android:paddingLeft="15dp"
+                android:paddingTop="5dp"
+                android:text="Abilities:"
+                android:fontFamily="@font/joystix"
+                android:textSize="11sp"
+                android:lineSpacingExtra="3dp"/>
 
             <TextView
                 android:id="@+id/typeId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="5dp"
-                android:paddingLeft="15dp"
-                android:textSize="12sp"
                 android:layout_below="@id/abilitiesId"
-                android:layout_toRightOf="@id/pokemonImageId"
-                android:text="Type"/>
+                android:layout_toRightOf="@id/imageCardView"
+                android:paddingLeft="15dp"
+                android:paddingTop="5dp"
+                android:text="Type"
+                android:fontFamily="@font/joystix"
+                android:textSize="11sp"/>
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
