--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,78 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.DetailActivity">
 
     <ImageView
-        android:id="@+id/detailImageId"
-        android:layout_width="251dp"
-        android:layout_height="251dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="111dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginRight="80dp"
-        android:layout_marginBottom="369dp"
-        android:background="@color/design_default_color_primary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/checkered_bg" />
 
-    <TextView
-        android:id="@+id/detailNameId"
-        android:layout_width="155dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="152dp"
-        android:layout_marginLeft="152dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="152dp"
-        android:layout_marginRight="152dp"
-        android:layout_marginBottom="299dp"
-        android:text="pokemon name"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:textAllCaps="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detailImageId"
-        app:layout_constraintVertical_bias="0.034"
-        android:gravity="center"
-        android:fontFamily="@font/prstart"/>
-
-    <TextView
-        android:id="@+id/detailHeightId"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.CardView
+        android:id="@+id/imageCardView"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/prstartk"/>
-
-    <TextView
-        android:id="@+id/detailWeightId"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/prstartk"/>
+        app:cardBackgroundColor="@color/colorPrimary"
+        app:cardCornerRadius="14dp"
+        android:paddingLeft="20dp"
+        android:layout_toLeftOf="@id/infoCardViewId">
 
-    <TextView
-        android:id="@+id/detailFlavorTextId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/prstartk"/>
 
-    <TextView
-        android:id="@+id/detailEvolvesFromId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/prstartk"/>
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="0dp">
 
-    <TextView
-        android:id="@+id/detailAbilitiesId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/prstartk"/>
+            <ImageView
+                android:id="@+id/detailImageViewId"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/stripe_background" />
 
-</android.support.constraint.ConstraintLayout>
+        </android.support.v7.widget.CardView>
+
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/infoCardViewId"
+        android:layout_width="258dp"
+        android:layout_height="77dp"
+        android:layout_toRightOf="@id/imageCardView"
+        android:paddingLeft="20dp"
+        app:cardBackgroundColor="@color/colorPrimaryLight"
+        app:cardCornerRadius="20dp"></android.support.v7.widget.CardView>
+
+
+</RelativeLayout>
