--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Activities.DetailActivity">
 
     <ImageView
@@ -12,17 +12,27 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/checkered_bg" />
+        android:src="@drawable/checkered_bg"
+        tools:layout_editor_absoluteX="45dp"
+        tools:layout_editor_absoluteY="29dp" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/imageCardView"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="233dp"
+        android:layout_marginRight="233dp"
+        android:layout_marginBottom="424dp"
+        android:paddingLeft="20dp"
         app:cardBackgroundColor="@color/colorPrimary"
         app:cardCornerRadius="14dp"
-        android:paddingLeft="20dp"
-        android:layout_toLeftOf="@id/infoCardViewId">
-
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <android.support.v7.widget.CardView
             android:layout_width="wrap_content"
@@ -35,8 +45,8 @@
                 android:id="@+id/detailImageViewId"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/stripe_background" />
+                android:background="@drawable/stripe_background" />
+
 
         </android.support.v7.widget.CardView>
 
@@ -47,10 +57,59 @@
         android:id="@+id/infoCardViewId"
         android:layout_width="258dp"
         android:layout_height="77dp"
+        android:layout_marginStart="161dp"
+        android:layout_marginLeft="173dp"
+        android:layout_marginTop="34dp"
+        android:layout_marginBottom="492dp"
         android:layout_toRightOf="@id/imageCardView"
         android:paddingLeft="20dp"
         app:cardBackgroundColor="@color/colorPrimaryLight"
-        app:cardCornerRadius="20dp"></android.support.v7.widget.CardView>
+        app:cardCornerRadius="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:elevation="0dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/pokeballId"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/pokeball_pixel"
+                android:padding="10dp"/>
+
+            <TextView
+                android:id="@+id/detailNameId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/pokeballId"
+                android:fontFamily="@font/joystix"
+                android:text="POKEMON NAME"
+                android:textSize="14sp"
+                android:paddingTop="8dp"
+                android:textAllCaps="true"/>
+
+            <TextView
+                android:id="@+id/detailGenusId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/pokeballId"
+                android:layout_marginTop="3dp"
+                android:fontFamily="@font/joystix"
+                android:paddingLeft="20dp"
+                android:paddingBottom="10dp"
+                android:text="GENUS TYPE"
+                android:textAllCaps="true"
+                android:textSize="13sp"
+                android:foregroundGravity="left"/>
+
+        </RelativeLayout>
 
 
-</RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+
+</android.support.constraint.ConstraintLayout>
