--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -87,7 +87,6 @@
                 android:layout_toRightOf="@id/pokeballId"
                 android:fontFamily="@font/joystix"
                 android:paddingTop="8dp"
-                android:text="POKEMON NAME"
                 android:textAllCaps="true"
                 android:textSize="14sp" />
 
@@ -101,7 +100,6 @@
                 android:foregroundGravity="left"
                 android:paddingLeft="20dp"
                 android:paddingBottom="10dp"
-                android:text="GENUS TYPE"
                 android:textAllCaps="true"
                 android:textSize="13sp" />
 
@@ -159,7 +157,6 @@
                 android:fontFamily="@font/joystix"
                 android:paddingLeft="60dp"
                 android:paddingTop="5dp"
-                android:text="HEIGHT"
                 android:textSize="15sp" />
 
             <TextView
@@ -171,7 +168,6 @@
                 android:fontFamily="@font/joystix"
                 android:paddingLeft="60dp"
                 android:paddingTop="13dp"
-                android:text="WEIGHT"
                 android:textSize="15sp" />
         </RelativeLayout>
 
@@ -179,6 +175,7 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView2"
         android:layout_width="355dp"
         android:layout_height="120dp"
         android:layout_marginStart="16dp"
@@ -187,48 +184,218 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="298dp"
+        app:cardBackgroundColor="#80A8F0"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:cardElevation="0dp"
-        app:cardBackgroundColor="#80A8F0"
-        app:cardCornerRadius="15dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <android.support.v7.widget.CardView
             android:layout_width="275dp"
             android:layout_height="100dp"
-            app:cardBackgroundColor="#FFFFFF"
             android:layout_gravity="center"
+            app:cardBackgroundColor="#FFFFFF"
             app:cardElevation="0dp">
 
             <TextView
                 android:id="@+id/flavorTextId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="9dp"
-                android:paddingRight="5dp"
-                android:paddingTop="3dp"
-                android:text="Flavour Text"
                 android:fontFamily="@font/orange_kid"
-                android:textSize="23sp"
-                android:textColor="#C3000000"
-                />
+                android:paddingLeft="9dp"
+                android:paddingTop="3dp"
+                android:paddingRight="5dp"
+                android:textSize="23sp" />
         </android.support.v7.widget.CardView>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/flavor_text_ovals"
             android:layout_gravity="center_vertical"
-            android:paddingLeft="10dp"/>
+            android:paddingLeft="10dp"
+            android:src="@drawable/flavor_text_ovals" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|center_vertical"
-            android:src="@drawable/flavor_text_ovals"
-            android:paddingRight="10dp"/>
+            android:paddingRight="10dp"
+            android:src="@drawable/flavor_text_ovals" />
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="355dp"
+        android:layout_height="230dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="35dp"
+        app:cardBackgroundColor="@color/colorPrimary"
+        app:cardElevation="0dp"
+        app:cardCornerRadius="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView2">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="275dp"
+            android:layout_height="208dp"
+            android:layout_gravity="center"
+            app:cardElevation="0dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
+
+                <TextView
+                    android:id="@+id/type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="12dp"
+                    android:paddingBottom="6dp"
+                    android:text="TYPE :"
+                    android:fontFamily="@font/orange_kid"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/abilities"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="6dp"
+                    android:paddingBottom="6dp"
+                    android:paddingLeft="12dp"
+                    android:text="ABILITIES :"
+                    android:layout_below="@id/type"
+                    android:fontFamily="@font/orange_kid"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/evolvesFrom"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="6dp"
+                    android:paddingBottom="6dp"
+                    android:paddingLeft="12dp"
+                    android:text="EVOLVES FROM :"
+                    android:layout_below="@id/abilities"
+                    android:fontFamily="@font/orange_kid"
+                    android:textSize="19sp"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/captureRate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="6dp"
+                    android:paddingBottom="6dp"
+                    android:paddingLeft="12dp"
+                    android:text="CAPTURE RATE :"
+                    android:layout_below="@id/evolvesFrom"
+                    android:fontFamily="@font/orange_kid"
+                    android:textSize="19sp"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/baseHappiness"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="6dp"
+                    android:paddingBottom="6dp"
+                    android:paddingLeft="12dp"
+                    android:text="BASE HAPPINESS :"
+                    android:layout_below="@id/captureRate"
+                    android:fontFamily="@font/orange_kid"
+                    android:textSize="19sp"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/typeTextViewId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="12dp"
+                    android:paddingBottom="6dp"
+                    android:fontFamily="@font/orange_kid"
+                    android:textSize="19sp"
+                    android:layout_toRightOf="@id/type"
+                    android:textAllCaps="true"/>
+
+                <TextView
+                    android:id="@+id/abilitiesTextViewId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="6dp"
+                    android:paddingBottom="6dp"
+                    android:paddingLeft="12dp"
+                    android:layout_below="@id/typeTextViewId"
+                    android:layout_toRightOf="@id/abilities"
+                    android:fontFamily="@font/orange_kid"
+                    android:textSize="19sp"
+                    android:textAllCaps="true"/>
+
+                <TextView
+                    android:id="@+id/evolvesFromTextViewId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="6dp"
+                    android:paddingBottom="6dp"
+                    android:paddingLeft="12dp"
+                    android:layout_below="@id/abilitiesTextViewId"
+                    android:layout_toRightOf="@id/evolvesFrom"
+                    android:fontFamily="@font/orange_kid"
+                    android:textSize="19sp"
+                    android:textAllCaps="true"/>
+
+                <TextView
+                    android:id="@+id/captureRateTextViewId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="6dp"
+                    android:paddingBottom="6dp"
+                    android:paddingLeft="12dp"
+                    android:layout_below="@id/evolvesFromTextViewId"
+                    android:layout_toRightOf="@id/captureRate"
+                    android:fontFamily="@font/orange_kid"
+                    android:textSize="19sp"
+                    android:textAllCaps="true"/>
+
+                <TextView
+                    android:id="@+id/baseHappinessTextViewId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="6dp"
+                    android:paddingBottom="6dp"
+                    android:paddingLeft="12dp"
+                    android:layout_below="@id/captureRateTextViewId"
+                    android:layout_toRightOf="@id/baseHappiness"
+                    android:fontFamily="@font/orange_kid"
+                    android:textSize="19sp"
+                    android:textAllCaps="true"/>
+            </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:src="@drawable/detail_ovals" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center_vertical"
+            android:paddingRight="10dp"
+            android:src="@drawable/detail_ovals" />
     </android.support.v7.widget.CardView>
 
 
